--- a/mapa_gtav/blaine_county.html
+++ b/mapa_gtav/blaine_county.html
@@ -2,14 +2,27 @@
 <html lang="pt-br">
 
 <head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="../Html/assets/icon5.png">
+	<title>Blaine County - GTAV</title>
+	
+	<meta name="description" content="Um site dedicado a fornecer informações, guias e curiosidades sobre o jogo Grand Theft Auto V.">
+	<meta name="keywords" content="GTA V, Grand Theft Auto V, videogame,,Rockstar Games, ação, aventura, mundo aberto, informacoes, mapa interativo, los santos, blaine county, los angeles, san andreas, california, deserto">
+	<meta name="author" content="Erick Ribeiro">
+	
+	<meta property="og:title" content="Blaine County - GTAV">
+	<meta property="og:description" content="Um site dedicado a fornecer informações, guias e curiosidades sobre o jogo Grand Theft Auto V.">
+	<meta property="og:image" content="https://img.gta5-mods.com/q75/images/more-agencies-mod-all-hands-on-deck/030255-MoreAgenciesModMap.PNG">
+	<meta property="og:url" content="http://127.0.0.1:5500/mapa_gtav/blaine_county.html">
+	<meta property="og:site_name" content="Setor G">
+	<meta property="og:type" content="website">
+	
+	<link rel="stylesheet" href="./blaine_county.css">
     <script src="../Html/code.jquery.com_jquery-3.7.0.js"></script>
-    <link rel="stylesheet" href="./blaine_county.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grand Theft Auto V</title>
+	
 </head>
-
 <body>
     <div class="wrapper">
         <header id="header">
@@ -40,7 +53,7 @@
             <h1>Blaine County (GTA V)</h1>
 
             <figure id="lafigure">
-                <img src="./assets/bc/blaine_county.webp" alt="">
+                <img src="./assets/blaine_county.webp" alt="">
                 <figcaption><span>Blaine County</span></figcaption>
 
             </figure>
@@ -69,13 +82,13 @@
                             <li><a class="link-ancla" href="#Vilas"><span>1.1</span> Vilas</a></li>
                         </ol>
                     </li>
-                    <li><a class="link-ancla" href="#Comunidades_habitadas_no_Condado_de_Blaine"><span>2.</span> Comunidades habitadas no Condado de Blaine</a>
+                    <li><a class="link-ancla" href="#ComunidadesHabitadasNoCondadoDeBlaine"><span>2.</span> Comunidades habitadas no Condado de Blaine</a>
                         <ol>
-                            <li><a class="link-ancla" href="#Vilas_(Towns)"><span>2.1</span> Vilas (Towns)</a></li>
-                            <li><a class="link-ancla" href="#Aldeias_(Villages)_e_Comunidades_Não-Incorporadas/Assentamentos"><span>2.2</span> Aldeias (Villages) e Comunidades Não-Incorporadas/Assentamentos</a></li>
-                            <li><a class="link-ancla" href="#Montanhas,_cordilheiras_e_vales"><span>2.3</span> Montanhas, cordilheiras e vales</a></li>
-                            <li><a class="link-ancla" href="#Lugares_de_Interesse"><span>2.4</span> Lugares de Interesse</a></li>
-                            <li><a class="link-ancla" href="#Campos_de_Pouso"><span>2.5</span> Campos de Pouso</a></li>
+                            <li><a class="link-ancla" href="#VilasTowns"><span>2.1</span> Vilas (Towns)</a></li>
+                            <li><a class="link-ancla" href="#AldeiasVillageseComunidadesNãoIncorporadasAssentamentos"><span>2.2</span> Aldeias (Villages) e Comunidades Não-Incorporadas/Assentamentos</a></li>
+                            <li><a class="link-ancla" href="#MontanhasCordilheiraseVales"><span>2.3</span> Montanhas, cordilheiras e vales</a></li>
+                            <li><a class="link-ancla" href="#LugaresdeInteresse"><span>2.4</span> Lugares de Interesse</a></li>
+                            <li><a class="link-ancla" href="#CamposdePouso"><span>2.5</span> Campos de Pouso</a></li>
                         </ol>
                     </li>
                     <li><a class="link-ancla" href="#Curiosidades"><span>3.</span> Curiosidades</a></li>
@@ -99,9 +112,9 @@
                 Outro ponto observável é que existem várias estradas que cruzam todo o condado as
                 principais rodovias são a Route 68.
             </p>
-            <h2 id="Comunidades_habitadas_no_Condado_de_Blaine">Comunidades
+            <h2 id="#ComunidadesHabitadasNoCondadoDeBlaine">Comunidades
                     habitadas no Condado de Blaine</h2>
-            <h3 id="Vilas_(Towns)">Vilas
+            <h3 id="VilasTowns">Vilas
                     (<i>Towns</i>)</h3>
             <ul>
                 <li>Grapeseed (Bakersfield/Lamont/Grapevin)</li>
@@ -115,7 +128,7 @@
                 para vila, é que o setor terciário (comércio e serviços) tem uma importância relevante e
                 lhe proporciona alguma auto-suficiência econômica.
             </p>
-            <h3 id="Aldeias_(Villages)_e_Comunidades_Não-Incorporadas/Assentamentos">Aldeias
+            <h3 id="AldeiasVillageseComunidadesNãoIncorporadasAssentamentos">Aldeias
                     (<i>Villages</i>) e Comunidades Não-Incorporadas/Assentamentos</h3>
             <ul>
                 <li>Stab City (Slab City)</li>
@@ -127,7 +140,7 @@
                 simples que a de uma vila ou cidade, sem autonomia administrativa e com economia de
                 subsistência (não exporta o excedente da economia, consumindo tudo); povoação rural.
             </p>
-            <h3 id="Montanhas,_cordilheiras_e_vales">Montanhas, cordilheiras e vales</h3>
+            <h3 id="MontanhasCordilheiraseVales">Montanhas, cordilheiras e vales</h3>
             <ul>
                 <li>Chiliad Mountain State Wilderness (San Gorgonio Wilderness)</li>
                 <li>Raton Canyon (Bixby Creek)</li>
@@ -137,7 +150,7 @@
                 <li>Cordilheira San Chianski (San Jacinto Mountains)</li>
                 <li>Mount Josiah (San Antonio)</li>
             </ul>
-            <h3 id="Lugares_de_Interesse">Lugares de Interesse</span></h3>
+            <h3 id="LugaresdeInteresse">Lugares de Interesse</span></h3>
             <ul>
                 <li>140 Zancudo Avenue</li>
                 <li>0232 Paleto Boulevard</li>
@@ -155,7 +168,7 @@
                 <li>RON Alternates Wind Farm (Tehachapi Pass Wind Farm)</li>
               </ul>
               
-            <h3 id="Campos_de_Pouso">Campos de Pouso</h3>
+            <h3 id="CamposdePouso">Campos de Pouso</h3>
             <ul>
                 <li>Sandy Shores Airfield (AppleValley Airport)</li>
                 <li>McKenzie Field (Bakersfield Municipal Airport)</li>
@@ -176,20 +189,24 @@
             </figure>
         </main>
         <footer>
-            <ul id="criadores" class="criadores">
-                <h2>Colaboradores</h2>
-                <li>Erick Ribeiro</li>
+            <ul class="criadores">
+                <h2>Desenvolvedores<h2>
+                <li><a href="https://github.com/ericksjp" target="_blank">Erick Ribeiro <br>GitHub: ericksjp</a></li>
                 <hr>
-                <li>Whendersson</li>
+                <li>Wenderson Dhomini</li>
                 <hr>
-                <li>Gerlândio</li>
+                <li>Gerlândio da Silva</li>
                 <hr>
                 <li>José Magno</li>
                 <hr>
                 <li>João Italo</li>
                 <hr>
             </ul>
-        </footer>
+            <div class="copright">
+                <p>Copyright © Bill Gatos</p>
+                <p>All Right Reserved</p>
+            </div>
+      </footer>
     </div>
 </body>
     <script src="../Html/index.js"></script>
