--- a/trofeus_gtav/teste2.html
+++ b/trofeus_gtav/teste2.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
-<html>
-<head>
-<script src="../Html/code.jquery.com_jquery-3.7.0.js"></script>
+<html lang="pt-br">
 
-  <link rel="stylesheet" href="./teste2.css">
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Grand Theft Auto V</title>
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="../Html/assets/icon5.png">
+	<title>Troféus e Guia de Platina do GTA V</title>
+	
+	<!-- Metadados para SEO -->
+	<meta name="description" content="Um site dedicado a fornecer informações, guias e curiosidades sobre o jogo Grand Theft Auto V.">
+	<meta name="keywords" content="GTA V, Grand Theft Auto V, videogame, troféus, guia de platina, conquistas, Rockstar Games, ação, aventura, mundo aberto, platina">
+	<meta name="author" content="Erick Ribeiro">
+	
+	<!-- Metadados para redes sociais -->
+	<meta property="og:title" content="Troféus e Guia de Platina do GTA V">
+	<meta property="og:description" content="Um site dedicado a fornecer informações, guias e dicas para obter todos os troféus e conquistar a platina no jogo Grand Theft Auto V.">
+	<meta property="og:image" content="https://exemplo.com/imagem_trofeus_gta_v.jpg">
+	<meta property="og:url" content="https://pbs.twimg.com/media/EbYnnOMWoAEsHrz.png">
+	<meta property="og:site_name" content="Setor G">
+	<meta property="og:type" content="website">
+	
+	<!-- Estilos CSS e scripts -->
+	<link rel="stylesheet" href="./teste2.css">
+    <script src="../Html/code.jquery.com_jquery-3.7.0.js"></script>
+	
 </head>
 <body>
   <div class="wrapper">
@@ -524,7 +541,7 @@
                 <div id="Trofeus"class="trofeus" style="padding-top: 5px;">
                     <h2>Troféus</h2>
 
-                    <div class="grid-container" id="#np66">
+                    <div class="grid-container" id="np66">
                         <img src="./assets/images/img1.webp" alt="" class="grid-item image">
                         <b class="grid-item b-text"> <span class="indice">01</span>. O Astro de Los Santos</b> <br>
                         <p class="grid-item i-text"><img class="trophyimg" src="./assets/trophys/platinum.webp" alt="">
@@ -1528,10 +1545,10 @@
                     </div>
                 </div>
             </main>
-            <footer>           
+            <footer>
                 <ul class="criadores">
-                    <h2>Desenvolvedores</h2>
-                    <li>Erick Ribeiro</li>
+                    <h2>Desenvolvedores<h2>
+                    <li><a href="https://github.com/ericksjp" target="_blank">Erick Ribeiro <br>GitHub: ericksjp</a></li>
                     <hr>
                     <li>Wenderson Dhomini</li>
                     <hr>
@@ -1542,7 +1559,11 @@
                     <li>João Italo</li>
                     <hr>
                 </ul>
-              </footer>
+                <div class="copright">
+                    <p>Copyright © Bill Gatos</p>
+                    <p>All Right Reserved</p>
+                </div>
+        </footer>
         </div>
     </body>
     <script src="../Html/index.js"></script>
