--- a/armas_gtav/armas.html
+++ b/armas_gtav/armas.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
+
 <head>
-<script src="../Html/code.jquery.com_jquery-3.7.0.js"></script>
-  <link rel="stylesheet" href="./armas.css">
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Grand Theft Auto V</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="../Html/assets/icon5.png">
+	<title>Armas do GTAV</title>
+	
+	<meta name="description" content="Um site dedicado a fornecer informações, guias e curiosidades sobre o jogo Grand Theft Auto V.">
+	<meta name="keywords" content="GTA V, Grand Theft Auto V, videogame,,Rockstar Games, ação, aventura, mundo aberto, informacoes, armas, weapons, bomba, granada, arma, pistola, metralhadora, ak-47">
+	<meta name="author" content="Erick Ribeiro">
+	
+	<meta property="og:title" content="Armas do GTAV">
+	<meta property="og:description" content="Um site dedicado a fornecer informações, guias e curiosidades sobre o jogo Grand Theft Auto V.">
+	<meta property="og:image" content="https://static.wikia.nocookie.net/gta/images/6/6b/WeaponRack-GTAV.jpg/revision/latest/scale-to-width-down/250?cb=20210403004747&path-prefix=pt">
+	<meta property="og:url" content="https://setorg.netlify.app/armas_gtav/armas.html">
+	<meta property="og:site_name" content="Setor G">
+	<meta property="og:type" content="website">
+	
+	<link rel="stylesheet" href="./armas.css">
+    <script src="../Html/code.jquery.com_jquery-3.7.0.js"></script>
+	
 </head>
 <body>
   <div class="wrapper">
@@ -2344,20 +2359,24 @@
                 </div>
             </main>
             <footer>
-                <ul id="criadores" class="criadores">
-                    <h2>Colaboradores</h2>
-                    <li>Erick Ribeiro</li>
+                <ul class="criadores">
+                    <h2>Desenvolvedores<h2>
+                    <li><a href="https://github.com/ericksjp" target="_blank">Erick Ribeiro <br>GitHub: ericksjp</a></li>
                     <hr>
-                    <li>Whendersson</li>
+                    <li>Wenderson Dhomini</li>
                     <hr>
-                    <li>Gerlândio</li>
+                    <li>Gerlândio da Silva</li>
                     <hr>
                     <li>José Magno</li>
                     <hr>
                     <li>João Italo</li>
                     <hr>
                 </ul>
-            </footer>
+                <div class="copright">
+                    <p>Copyright © Bill Gatos</p>
+                    <p>All Right Reserved</p>
+                </div>
+          </footer>
         </div>
 
         <body>
