--- a/mapa_gtav/mapashp.html
+++ b/mapa_gtav/mapashp.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
+
 <head>
-<script src="../Html/code.jquery.com_jquery-3.7.0.js"></script>
-  <link rel="stylesheet" href="./mapashp.css">
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Grand Theft Auto V</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="../Html/assets/icon5.png">
+	<title>Mapa do GTA V</title>
+	
+	<meta name="description" content="Um site dedicado a fornecer informações, guias e curiosidades sobre o jogo Grand Theft Auto V.">
+	<meta name="keywords" content="GTA V, Grand Theft Auto V, videogame,,Rockstar Games, ação, aventura, mundo aberto, informacoes, mapa interativo, los santos, blaine county, los angeles, san andreas, california">
+	<meta name="author" content="Erick Ribeiro">
+	
+	<meta property="og:title" content="Mapa do GTA V">
+	<meta property="og:description" content="Um site dedicado a fornecer informações, guias e curiosidades sobre o jogo Grand Theft Auto V.">
+	<meta property="og:image" content="https://miro.medium.com/v2/resize:fit:1400/0*ihIP7osLbx8UWOnH.jpg">
+	<meta property="og:url" content="http://127.0.0.1:5500/mapa_gtav/mapashp.html">
+	<meta property="og:site_name" content="Setor G">
+	<meta property="og:type" content="website">
+	
+	<link rel="stylesheet" href="./mapashp.css">
+    <script src="../Html/code.jquery.com_jquery-3.7.0.js"></script>
+	
 </head>
 <body>
   <div class="wrapper">
@@ -37,7 +52,7 @@
             <div class="subsecs">
                 <a class="ls" href="./los_santos.html">
                     <h2>Los Santos</h2>
-                    <img src="./assets/Lossantos_seal.png" alt="">
+                    <img src="./assets/Lossantos_seal.webp" alt="">
                 </a>
                 <a class="bc" href="./blaine_county.html">
                     <h2>Blaine County</h2>
@@ -63,20 +78,24 @@
             </div> -->
         </main>
         <footer>
-            <ul id="criadores" class="criadores">
-                <h2>Colaboradores</h2>
-                <li>Erick Ribeiro</li>
+            <ul class="criadores">
+                <h2>Desenvolvedores<h2>
+                <li><a href="https://github.com/ericksjp" target="_blank">Erick Ribeiro <br>GitHub: ericksjp</a></li>
                 <hr>
-                <li>Whendersson</li>
+                <li>Wenderson Dhomini</li>
                 <hr>
-                <li>Gerlândio</li>
+                <li>Gerlândio da Silva</li>
                 <hr>
                 <li>José Magno</li>
                 <hr>
                 <li>João Italo</li>
                 <hr>
             </ul>
-        </footer>
+            <div class="copright">
+                <p>Copyright © Bill Gatos</p>
+                <p>All Right Reserved</p>
+            </div>
+      </footer>
     </div>
 </body>
     <script src="../Html/index.js"></script>       
