pagina 'radio' att 2 / ajustando indice

--- a/radio_gtav/radios.html
+++ b/radio_gtav/radios.html
@@ -88,7 +88,7 @@
 					<li><a class="link-ancla" href="#West_Coast_Classics"><span>3.</span> West Coast Classics</a></li>
 					<li><a class="link-ancla" href="#Rebel_Radio"><span>4.</span> Rebel Radio</a></li>
 					<li><a class="link-ancla" href="#Los_Santos_Rock_Radio"><span>5.</span> Los Santos Rock Radio</a></li>
-					<li><a class="link-ancla" href="#The_Lowdown_91.1"><span>6.</span> The Lowdown 91.1</a></li>
+					<li><a class="link-ancla" href="#TheLowdown911"><span>6.</span> The Lowdown 91.1</a></li>
 					<li><a class="link-ancla" href="#Blue_Ark"><span>7.</span> Blue Ark</a></li>
 					<li><a class="link-ancla" href="#Non_Stop_Pop_FM"><span>8.</span> Non Stop Pop Fm</a></li>
 					<li><a class="link-ancla" href="#East_Los_FM"><span>9.</span> East Los FM</a></li>
@@ -100,7 +100,7 @@
 					<li><a class="link-ancla" href="#Blaine_County_Talk_Radio"><span>14.</span>Blaine County Talk Radio</a></li>
 					<li><a class="link-ancla" href="#WCTR"><span>14.</span> WCTR</a></li>
 					<li><a class="link-ancla" href="#The_Lab"><span>14.</span> The Lab</a></li>
-					<li><a class="link-ancla" href="#blonded_Los_Santos_97.8_FM"><span>14.</span> Blonded Los Santos 97.8 FM</a></li>
+					<li><a class="link-ancla" href="#blonded_Los_Santos_978_FM"><span>14.</span> Blonded Los Santos 97.8 FM</a></li>
 					<li><a class="link-ancla" href="#Los_Santos_Underground_Radio"><span>14.</span> Los Santos Underground Radio</a></li>
 					<li><a class="link-ancla" href="#iFruit_Radio"><span>15.</span> Ifruit Radio</a></li>
 					<li><a class="link-ancla" href="#Curiosidades"><span>16.</span> Curiosidades</a></li>	
@@ -385,7 +385,7 @@
 
 			<div class="container">
 				<div class="text">
-					<h2><span class="radio_name" id="The_Lowdown_91.1">The Lowdown 91.1</span></h2>
+					<h2><span class="radio_name" id="TheLowdown911">The Lowdown 91.1</span></h2>
 					<a href="https://open.spotify.com/playlist/4BHVFx2AXp2bXpaRe1KwEJ?si=0f2051f7fc2a41dc" id="playlist_link"
 						target="_blank">
 						<b> <img src="./assets/16x16.webp" alt="" style="position: relative; top: 2px;"> Playlist The Lowdown 91.1</b>
@@ -1004,7 +1004,7 @@
 
 			<div class="container">
 				<div class="text">
-					<h2><span class="radio_name" id="blonded_Los_Santos_97.8_FM">blonded Los Santos 97.8 FM</span></h2>
+					<h2><span class="radio_name" id="#blonded_Los_Santos_978_FM">blonded Los Santos 97.8 FM</span></h2>
 					<a href="https://open.spotify.com/playlist/2XQpcYV7oU7bwNzTuabw27" id="playlist_link" target="_blank">
 						<b> <img src="./assets/16x16.webp" alt="" style="position: relative; top: 2px;"> Playlist blonded Los Santos 97.8 FM</b>
 					</a>
