main page att 2 / ajustando bordas e letras

--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
 		<div class="lado">
 			<ul class="destaques">
 				<h2>Artigos em destaque</h2>
-				<li><a href="../mapa_gtav/los_santos.html">A urbana e suja Los Santos</a></li>
+				<li><a href="../mapa_gtav/los_santos.html">A Urbana e Suja Los Santos</a></li>
 				<hr>
-				<li><a href="../veiculos_gtav/motos.html">Motos: Um acidente ambulante</a></li>
+				<li><a href="../veiculos_gtav/motos.html">Motos: Um Acidente Ambulante</a></li>
 				<hr>
-				<li><a href="../mapa_gtav/blaine_county.html">A rural e incestuosa Blaine County</a></li>
+				<li><a href="../mapa_gtav/blaine_county.html">A Rural e Incestuosa Blaine County</a></li>
 				<hr>
 				<li><a href="../veiculos_gtav/bicicletas.html">Saúde é bicicleta!</a></li>
 				<hr>
