blaine county foto / sns pistol foto / pagina veiculos header a fonte

--- a/mapa_gtav/blaine_county.html
+++ b/mapa_gtav/blaine_county.html
@@ -184,7 +184,7 @@
 
             <h2 id="Galeria">Galeria</h2>
             <figure class="mapafig">
-                <img src="./assets/f224110dc6b4d94f9c8ed55f63726aba28c01444_hq.jpg" alt="">
+                <img src="./assets/f224110dc6b4d94f9c8ed55f63726aba28c01444_hq.webp" alt="">
                 <figcaption>Blaine County</figcaption>
             </figure>
         </main>
